# mercury

./: .gitignore  CMakeLists.txt
CMake/: FindSLURM.cmake  TestMacros.cmake  mercury-config.cmake.build.in
Testing/: CMakeLists.txt  mercury_rpc_cb.c  mercury_test.c  mercury_test_config.h.in  test_BW.cpp  test_rpc.c  test_server.c
Testing/na/: CMakeLists.txt  client_simple_na.c  na_test.c  test_server.c
Testing/old/: server_pipeline.c
Testing/timing/: timing.txt
src/: CMakeLists.txt  mercury.c  mercury_core.c  mercury_handler.c
src/cxx/: mercury_wrapper.h
src/na/: CMakeLists.txt  MercuryController.cc  MercuryController.h  cscs_messages.h  na.c  na_config.h.in  na_verbs.cc  na_verbs.h
src/util/: mercury_time.c
